--- a/app/src/main/res/layout/viewholder_joined_room.xml
+++ b/app/src/main/res/layout/viewholder_joined_room.xml
@@ -88,6 +88,16 @@
                 app:layout_constraintVertical_bias="0.0"
                 tool:text="여기는 미션을 알려주는 공간입니다아 최대 2줄임" />
 
+            <org.sopt.santamanitto.view.SantaLoading
+                android:id="@+id/santaloading_joinedroom"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </org.sopt.santamanitto.view.SantaCardView>
