--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -51,4 +51,8 @@
         <attr name="number" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="SantaCardView">
+        <attr name="moreRound" format="boolean"/>
+    </declare-styleable>
+
 </resources>
