--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="org.sopt.santamanitto.signin.viewmodel.ConditionViewModel" />
+            type="org.sopt.santamanitto.user.signin.viewmodel.ConditionViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
