--- a/app/src/main/res/navigation/navigation_santa.xml
+++ b/app/src/main/res/navigation/navigation_santa.xml
@@ -8,5 +8,16 @@
         android:id="@+id/mainFragment"
         android:name="org.sopt.santamanitto.main.MainFragment"
         android:label="MainFragment"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_createRoomFragment"
+            app:destination="@id/createRoomFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/createRoomFragment"
+        android:name="org.sopt.santamanitto.room.fragment.CreateRoomFragment"
+        android:label="CreateRoomFragment"
+        tools:layout="@layout/fragment_create_room"/>
+
 </navigation>
