--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -55,4 +55,9 @@
         <attr name="moreRound" format="boolean"/>
     </declare-styleable>
 
+    <declare-styleable name="SantaNumberPicker">
+        <attr name="minValue" format="integer"/>
+        <attr name="maxValue" format="integer"/>
+    </declare-styleable>
+
 </resources>
