--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,8 @@
         </attr>
         <attr name="hint" format="string" />
         <attr name="isSingleLine" format="boolean"/>
+        <attr name="isEditable" format="boolean"/>
+        <attr name="isSlim" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="SantaImageRoundButton">
@@ -58,6 +60,10 @@
     <declare-styleable name="SantaNumberPicker">
         <attr name="minValue" format="integer"/>
         <attr name="maxValue" format="integer"/>
+    </declare-styleable>
+
+    <declare-styleable name="SantaBottomButton">
+        <attr name="isGrayButton" format="boolean"/>
     </declare-styleable>
 
 </resources>
