--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,11 @@
     <dimen name="padding_entire">16dp</dimen>
     <dimen name="margin_bottombutton_bottom">40dp</dimen>
 
+    <dimen name="margin_dialog_title_text_vertical">15dp</dimen>
+    <dimen name="margin_dialog_button_text_vertical">25dp</dimen>
+    <dimen name="size_dialog_text">17sp</dimen>
+    <dimen name="height_dialog_content">175dp</dimen>
+
     <dimen name="width_edittext_rightbutton">30dp</dimen>
     <dimen name="margin_santaedittext_edittext_vertical">7dp</dimen>
     <dimen name="margin_santaedittext_button_vertical">7dp</dimen>
