feat: Add CreateConfirmFragment and set mission list

--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -204,7 +204,7 @@
                         app:layout_constraintHorizontal_chainStyle="packed"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:layout_marginEnd="4dp"
+                        android:layout_marginEnd="@dimen/margin_space_letter"
                         app:layout_constraintVertical_chainStyle="packed"
                         tool:text="7일 후인" />
 
