--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,4 +35,10 @@
         <item name="android:textColor">@color/gray_3</item>
     </style>
 
+    <style name="PreviewTextOfCreateConfirm" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">@dimen/size_createconfirm_expiration_description</item>
+        <item name="android:letterSpacing">-0.04</item>
+        <item name="android:textColor">@color/gray_3</item>
+    </style>
+
 </resources>
