--- a/app/src/main/res/navigation/navigation_create_room.xml
+++ b/app/src/main/res/navigation/navigation_create_room.xml
@@ -2,18 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/santa_navigation"
-    app:startDestination="@id/mainFragment">
-
-    <fragment
-        android:id="@+id/mainFragment"
-        android:name="org.sopt.santamanitto.main.MainFragment"
-        android:label="MainFragment"
-        tools:layout="@layout/fragment_main">
-        <action
-            android:id="@+id/action_mainFragment_to_createRoomFragment"
-            app:destination="@id/createRoomFragment" />
-    </fragment>
+    android:id="@+id/navigation_create_room"
+    app:startDestination="@id/createRoomFragment">
 
     <fragment
         android:id="@+id/createRoomFragment"
