--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -10,6 +10,15 @@
         android:name="org.sopt.santamanitto.main.MainFragment"
         android:label="MainFragment"
         tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/action_mainFragment_to_joinRoomFragment"
+            app:destination="@id/joinRoomFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/joinRoomFragment"
+        android:name="org.sopt.santamanitto.room.join.JoinRoomFragment"
+        android:label="JoinRoomFragment"
+        tools:layout="@layout/fragment_join_room" />
 
 </navigation>
